@@ -5,6 +5,7 @@ Revision history for Cassandra-Client
       * Refactor a series of (for now) undocumented APIs
       * Encoder rewritten in XS, for performance
       * Support connecting to Cassandra via IPv6
+      * Implement exponential backoff for connection failures
 
 0.13    2017/07/05
 
